# packaging-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/example_package.egg-info/: PKG-INFO  SOURCES.txt
src/example_package/example_subpackage/: __init__.py  subexample.py
